@@ -2,7 +2,14 @@
 
 SUBDIRS = $(POSUB) src build data man doc
 
-EXTRA_DIST = AUTHORS FEEDBACK COPYING INSTALL NEWS vice.spec vice-mint.spec
+EXTRA_DIST = AUTHORS \
+	FEEDBACK \
+	COPYING \
+	Doxyfile \
+	INSTALL \
+	NEWS \
+	vice.spec \
+	vice-mint.spec
 
 .PHONY: x64 x128 xvic xpet xplus4 xcbm2
 x64:
